# kinova_demos

./: .gitignore  README.md  grc26.repos
grc26/: CMakeLists.txt  package.xml
grc26/config/: ctr_gains_collaborate.yaml  ctr_gains_grasp_object.yaml  ctr_gains_idle.yaml  ctr_gains_slide_on_table.yaml  ctr_gains_traj_tracking.yaml
grc26/include/grc26/: achd_solver.hpp  action_server_node.hpp  arm_kdl_model.hpp  arm_kinematics.hpp  cartesian_motion_setpoint.hpp  command_line_utility.hpp  compute_controller_command.hpp  constraint_monitors.hpp  controller_config.hpp  filters.hpp  fsm_interface.hpp  hardware_binding.hpp  kinova_single_arm_demo.fsm  kinova_single_arm_demo.fsm.hpp  pid_controller.hpp  solver_state_interface.hpp  system_state.hpp  task_spec.hpp  task_status.hpp  task_status_node.hpp  trajectory.hpp
grc26/msg/: CartesianPIDDebug.msg  PIDDebug.msg  TaskStatus.msg
grc26/scripts/: debug_plotter.py
grc26/src/: achd_solver.cpp  action_server_node.cpp  arm_kdl_model.cpp  arm_kinematics.cpp  command_line_utility.cpp  compute_controller_command.cpp  constraint_monitors.cpp  controller_config.cpp  filters.cpp  fsm_interface.cpp  fsm_utils.cpp  kinova_single_arm_demo.cpp  pid_controller.cpp  solver_state_interface.cpp  task_status.cpp  task_status_node.cpp  trajectory.cpp
grc26/test/: achd_fj_test.cpp
grc26/urdf/: GEN3_URDF_V12.urdf  kinova_ft.xacro  pick_place.xacro  table.xacro
grc26_isaacsim_task/assets/: grc26_demo.usd
grc26_isaacsim_task/grc26_isaacsim_task/: dualarm_pick_place.py
grc26_isaacsim_task/models/: dualarm_task.fsm  fsm.py
grc26_isaacsim_task/scripts/: launch_sim.py
grc26_kinova_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml  readme.md
grc26_kinova_moveit_config/config/: gen3_2f_85_pick_place.ros2_control.xacro  gen3_2f_85_pick_place.srdf  gen3_2f_85_pick_place.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  pick_place.urdf  ros2_controllers.yaml
grc26_kinova_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
