<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>grc26</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="secorolab@gmail.com">secoro</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>ament_index_cpp</depend>
  
  <depend>bdd_ros2_interfaces</depend>
  <depend>robif2b</depend>
  <depend>coord2b</depend>
  <depend>orocos_kdl</depend>
  <depend>geometry_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>sensor_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>xacro</depend>
  <depend>unique_identifier_msgs</depend> 

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
